- Fixed: Per user sid lists provided by custom usermanagers were ignored for multi-context sessions (Csp, ExtNewcamd).
- Fixed: The default-deny-list wasn't checked for CspConnect connection attempts.
- Fixed: Closing of old sessions (on new login) wasn't working for ExtNewcamd.
- Fixed: Debug mode for the "*" pseudo profile (Csp, ExtNewcamd) couldn't be turned off via config (attribute ignored).
- Changed: Two ecms (or dcw replies) with the same payload data but different dvb table ids (even/0x80 vs odd/0x81) are
  now considered identical by the proxy. Implications unknown.
- Changed: ClusteredCache transport format now includes meta-data such as ca-id and network-id.
  NOTE: This breaks compatibility with previous versions. If one node has the new format, all nodes must be upgraded.
  The source ip's of any received incompatible updates are listed in the property 'version-mismatch'.
- Changed: Enabling debug for a user now also enables web transaction logs for that user (same as profile debug).
  NOTE: Kicking the users sessions may be required before this takes effect (both after enabling and disabling).
- Added: Cws event for found service now shown in the status-web (despite the command being called error-log).
- Added: Experimental sid cache linking feature, allows cache hits based on meta-data like sid rather than ecm payload.
  Links added via the web commands are stored in etc/links.cfg (this file is monitored for changes and autoloaded also).
- Added: More sanity checks to DcwFilterPlugin (checksums, length and an option to monitor all replies for duplicates).
- Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
- Added: proxy-reference.html updated with highlighting for important elements and additional examples.
- Added: Ability to set start and expiration date for user accounts (only Simple and XmlUsermanager).